Fixing alignments. (#970)

--- a/styleguide/assets/public/css/style-sass-components.css
+++ b/styleguide/assets/public/css/style-sass-components.css
@@ -2176,12 +2176,12 @@ Style guide field
 @media (min-width: 768px) {
   .field .field__label:not(.field__label--above) {
     display: inline-block;
-    width: 19%;
+    width: 20%;
     padding: 0.335em 0 0 0;
     vertical-align: top; }
     .field .field__label:not(.field__label--above) + .field__items {
       display: inline-block;
-      width: 80%; } }
+      width: 79%; } }
 
 /*
 Field aligned
@@ -2198,7 +2198,7 @@ Style guide field.aligned
     margin-top: -0.556em; }
     .field--aligned .field__items {
       display: inline-block;
-      width: 80%;
+      width: 79%;
       margin-left: 20.8%; } }
 
 @media (min-width: 992px) {
